--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <p>So stay if you still love me and we will make this work out</p>
     </div>
     <div class="btn">
-        <a href="Yes.html">Yes i will stay</a>
-        <a href="No.html">No fuck off chal chal nikal</a>
+        <a href="yes.html">Yes i will stay</a>
+        <a href="no.html">No fuck off chal chal nikal</a>
         <a href="suar.html">Chal be suar</a>
     </div>
 </body>
